# vae_single_cell_data_integration

./: Dockerfile  README.md  main.nf  multimodal_archetypal_classifier_w_early_stop_v2_running_avg_losses_hyperparameter_sweep.py  multimodal_v2_running_avg_loss_hyperparameter_tuning.sh  nextflow.config  pyproject.toml  requirements.txt  version.config
.github/workflows/: bump_version.yml  containers.yml
nextflow/modules/: train.nf
nextflow/workflows/: param_sweep.nf
scripts/: run_nextflow_sweep.sh
src/vae_single_cell_data_integration/: multimodal_archetypal_classifier.py
src/vae_single_cell_data_integration/cli/: train.py
